# DotStudy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat  build.gradle  dotstudy.code-workspace  package-lock.json  package.json  settings.gradle
compiler/dotstudy/: Cargo.toml
compiler/dotstudy/examples/: test.md
compiler/dotstudy/src/: main.rs
compiler/dotstudy/src/commands/: generate.rs  mod.rs  publish.rs
compiler/dotstudy/src/discord/: format.rs
extension/: package.json  tsconfig.json
extension/syntaxes/: md-study-inline.tmLanguage.json
src/: discord.ts  extension.ts  language.ts  preview.html  preview.ts  publish.ts  util.ts
src/main/java/org/intellij/sdk/DotStudy/Discord/: Client.java
src/main/java/org/intellij/sdk/DotStudy/Language/: Simple.bnf  Simple.flex  SimpleBlock.java  SimpleColorSettingsPage.java  SimpleFileType.java  SimpleFormattingModelBuilder.java  SimpleIcons.java  SimpleLanguage.java  SimpleLexerAdapter.java  SimpleParserDefinition.java  SimpleSyntaxHighlighter.java  SimpleSyntaxHighlighterFactory.java
src/main/java/org/intellij/sdk/DotStudy/Settings/: AppSettingsComponent.java  AppSettingsConfigurable.java  AppSettingsState.java
src/main/java/org/intellij/sdk/DotStudy/ToolWindow/: FileListener.java  MyToolWindow.form  MyToolWindow.java  MyToolWindowFactory.java
src/main/java/org/intellij/sdk/DotStudy/Util/: FormatUtil.java  ImageUtil.java
syntaxes/: language-configuration.json  md-study-inline.tmLanguage.json  study.tmLanguage.json
vsix/: dotstudy-0.0.1.vsix  dotstudy-0.0.3.vsix  dotstudy-0.0.4.vsix
(+3 files in other folders)
