[package]
name = "dotstudy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive", "cargo"] }
pulldown-cmark = "0.9.2"
serenity = "0.11.5"
futures = "0.3.25"